syntax = "proto3";

option go_package = "bigcache/ttrpc/rpccache;rpccache";

import "google/protobuf/empty.proto";
//import "gogoproto/gogo.proto";

service CacheService{
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (google.protobuf.Empty);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message PutRequest{
    string key = 1;
    bytes value =2;
}

message DeleteRequest{
    string key = 1;
}